--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js"></script>
     <link rel="stylesheet" href="volby.css" />
 
-<<<<<<< HEAD
-    <title>Nevolby</title>
-=======
-    <title>Volby</title>
->>>>>>> zmena titul
+    <title>volby</title>
   </head>
   <body>
     <button class="otazka">Budou ještě tento rok volby?</button>
