--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>volby</title>
   </head>
   <body>
+    <div>A</div>
+    <div>B</div>
     <button class="otazka">Budou ještě tento rok volby?</button>
     <button id="msg" class="msg"></button>
     <script src="volby.js"></script>
