--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <div>A</div>
     <div>B</div>
+    <div>A</div>
+    <div>B</div>
     <button class="otazka">Budou ještě tento rok volby?</button>
     <button id="msg" class="msg"></button>
     <script src="volby.js"></script>
